--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
 		"@tsparticles/engine": "^3.5.0",
 		"@tsparticles/slim": "^3.5.0",
 		"@tsparticles/svelte": "^3.1.1"
+	},
+	"engines": {
+		"node": "20.x"
 	}
 }
