--- a/package.json
+++ b/package.json
@@ -8,39 +8,40 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"lint": "prettier --check src && eslint src",
+		"format": "prettier --write src",
 		"typegen": "pnpx pocketbase-typegen --env --out src/types/pocketbase.d.ts"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
-		"@types/eslint": "^9.6.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.4",
+		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.0.0",
+		"eslint": "^9.19.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"postcss": "^8.4.47",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.13",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3"
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
+		"postcss": "^8.5.1",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.19.6",
+		"svelte-check": "^4.1.4",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.22.0",
+		"vite": "^5.4.14"
 	},
 	"type": "module",
 	"dependencies": {
-		"@tsparticles/engine": "^3.5.0",
-		"@tsparticles/slim": "^3.5.0",
+		"@tsparticles/engine": "^3.8.1",
+		"@tsparticles/slim": "^3.8.1",
 		"@tsparticles/svelte": "^3.1.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
 		"pocketbase": "^0.21.5"
 	},
 	"engines": {
-		"node": "20.x"
+		"node": "22.x"
 	}
 }
